fix color contrast

--- a/client/web/src/notebooks/notebook/NotebookOutline.module.scss
+++ b/client/web/src/notebooks/notebook/NotebookOutline.module.scss
@@ -93,7 +93,7 @@
 }
 
 .highlight {
-    color: var(--primary);
+    color: var(--body-color);
 }
 
 .highlight-dot {
